--- a/client/web/package.json
+++ b/client/web/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@avatechai/avatars": "^0.4.21-next.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
-    "@avatechai/avatars": "^0.4.21-next.0",
+    "@nextui-org/react": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.0.0",
+    "framer-motion": "^10.15.0",
     "is-ip": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
